manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    fleetoptimiser-lab/owner: local
    fleetoptimiser-lab/mesh: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    fleetoptimiser-lab/owner: local
    istio-injection: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: fleetoptimiser-lab
  labels:
    fleetoptimiser-lab/owner: local
    fleetoptimiser-lab/mesh: enabled
    istio-injection: enabled
